src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Loan sales process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Initial Setup</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Adi_Amort_term__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amort term (months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adi_Ant_funding_amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ant funding amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adi_Approval_date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Approval date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adi_Client_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AdiAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adi_Closing_date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Closing date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adi_Collateral_Address__c</fullName>
        <label>Collateral address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adi_Commitment_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Commitment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adi_Dead_deal_date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Dead deal date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adi_Div_manager__c</fullName>
        <formula>Adi_Relationship_manager__r.Adi_Divmanager__r.FirstName + Adi_Relationship_manager__r.Adi_Divmanager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adi_IO__c</fullName>
        <description>Test Picklist</description>
        <inlineHelpText>Test Picklist</inlineHelpText>
        <label>IO</label>
        <picklist>
            <picklistValues>
                <fullName>IO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adi_IO_term__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Test Number</description>
        <inlineHelpText>Test Number</inlineHelpText>
        <label>IO term (months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adi_Include_in_forecast__c</fullName>
        <label>Include in forecast</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adi_Index_rate__c</fullName>
        <description>Test Picklist</description>
        <inlineHelpText>Test Picklist</inlineHelpText>
        <label>Index rate</label>
        <picklist>
            <picklistValues>
                <fullName>Term Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Line of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revolving Line of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adi_Law_firm_assigned__c</fullName>
        <label>Law firm assigned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adi_Loan_number__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Test Number</description>
        <inlineHelpText>Test Number</inlineHelpText>
        <label>Loan number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adi_Loan_purpose__c</fullName>
        <label>Loan purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension of Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase &amp; Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replace Guarantor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working Capital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adi_Loan_status__c</fullName>
        <label>Loan status</label>
        <picklist>
            <picklistValues>
                <fullName>Term Sheet Issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay-Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay-Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead Deal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adi_Loan_term__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Test Number</description>
        <inlineHelpText>Test Number</inlineHelpText>
        <label>Loan term (months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adi_Loan_type__c</fullName>
        <label>Loan type</label>
        <picklist>
            <picklistValues>
                <fullName>Term Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Line of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revolving Line of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adi_Oigination_fee__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Test Percent</description>
        <inlineHelpText>Test Percent</inlineHelpText>
        <label>Oigination fee (%)</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Adi_Origination_fee__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Test Currency</description>
        <inlineHelpText>Test Currency</inlineHelpText>
        <label>Origination fee ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adi_Payoff_paydown_amt__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Test Currency</description>
        <inlineHelpText>Test Currency</inlineHelpText>
        <label>Pay-off/pay-down amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adi_Payoff_paydown_date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Test Date</description>
        <inlineHelpText>Test Date</inlineHelpText>
        <label>Pay-off/pay-down date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adi_Prepayment_penalty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Test Currency</description>
        <inlineHelpText>Test Currency</inlineHelpText>
        <label>Pre-payment penalty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adi_Product_type__c</fullName>
        <label>Product type</label>
        <picklist>
            <picklistValues>
                <fullName>ABL (LOC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRE - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease/Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON-ABL (LOC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operating Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner Occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revolving Line of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secured LOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsecured LOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsecured Revolving LOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T/E C&amp;I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T/E CRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T/E Lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adi_Rate_type__c</fullName>
        <description>Test Picklist</description>
        <inlineHelpText>Test Picklist</inlineHelpText>
        <label>Rate type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adi_Relationship_manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>AdiContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adi_Spread__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Test Percent</description>
        <inlineHelpText>Test Percent</inlineHelpText>
        <label>Spread (%)</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Adi_Submitted_to_underwriting_date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Test Date</description>
        <inlineHelpText>Test Date</inlineHelpText>
        <label>Submitted to underwriting date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adi_Swap__c</fullName>
        <label>Swap</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adi_Team__c</fullName>
        <formula>Adi_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adi_Team_leader__c</fullName>
        <formula>Adi_Relationship_manager__r.Adi_Team_Leader__r.FirstName + Adi_Relationship_manager__r.Adi_Team_Leader__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team leader</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adi_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adi_Underwriter__c</fullName>
        <label>Underwriter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>TODAY() - Stage_changed_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auto_reinvest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto reinvest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Tax_Returns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Tax Returns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capital_Allocation_and_Approvals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capital Allocation and Approvals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inbound_Client_Credit_at_RBS_NV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inbound Client/Credit at RBS NV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_reinvest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest reinvest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfProducts__c</fullName>
        <label>NumberOfProducts</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Age__c</fullName>
        <formula>TODAY()-DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Age__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Overall Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31 - 90 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>91 - 180 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above 180 days</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deposits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derivatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cards</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Property Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the relationship to your Amended Contract.</description>
        <inlineHelpText>Lookup to your Amended Contract.</inlineHelpText>
        <label>Amended Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Amendment Opportunities</relationshipLabel>
        <relationshipName>AmendmentOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag used to kick off automatic asset and subscription conversion.</description>
        <inlineHelpText>Salesforce CPQ uses this field to automatically convert assets and subscriptions.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreateContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to create Contracted Prices without creating a Contract.</description>
        <inlineHelpText>Select this checkbox to create Contracted Prices without creating a Contract.</inlineHelpText>
        <label>Create Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to primary quote on this opportunity.</description>
        <inlineHelpText>Salesforce CPQ uses this to point to the primary quote on this opportunity.</inlineHelpText>
        <label>Primary Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>SBQQ__Quote__c.SBQQ__Opportunity2__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>PrimaryOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotePricebookId__c</fullName>
        <description>Custom pricebook ID field that updates the standard Pricebook2Id field. Use to automatically drive pricebook selection from workflow rules.</description>
        <label>Quote Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this opportunity is a renewal opportunity.</description>
        <inlineHelpText>Indicates this opportunity is a renewal opportunity.</inlineHelpText>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract being renewed by this renewal opportunity. In case opportunity rolls up several contracts this points at the master contract.</description>
        <inlineHelpText>Contract being renewed by this renewal opportunity. If the several contracts roll up to this opportunity, this points at the master contract.</inlineHelpText>
        <label>Renewed Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>RenewalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_changed_date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Stage changed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_Proposition__c</fullName>
        <label>Value Proposition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Yield_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Opps_Closing_This_Month</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>My Opps Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Top_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Mine</filterScope>
        <label>Top Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Loan</fullName>
        <active>true</active>
        <businessProcess>Loan sales process</businessProcess>
        <label>Loan</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>AddProductsBeforeIMReveiw</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
 NumberOfProducts__c = 0,
ISPICKVAL(StageName, &quot;Implementation Review&quot;)
)</errorConditionFormula>
        <errorMessage>Please get the products configured before proceeding to the next stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>capture_Value_Proposition</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
ISBLANK( Value_Proposition__c),
 Probability  &gt; 0.50
)</errorConditionFormula>
        <errorDisplayField>Value_Proposition__c</errorDisplayField>
        <errorMessage>Please capture value proposition before proceeding to the next stage</errorMessage>
    </validationRules>
</CustomObject>